[tool.poetry]
name = "runekit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL"
include = ["runekit/_resources.py", "runekit/app/bundled/*"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.26.0"
PySide6 = "^6.11"
Pillow = "^10.0"
sysv-ipc = [{ version="^1.1.0", platform="linux" }]
xcffib = [{ version="^0.11.1", platform="linux" }]
pyobjc-framework-Quartz = [{ version="^12.0", platform="darwin" }]
pyobjc-framework-ApplicationServices = [{ version="^12.0", platform="darwin" }]
pyobjc-framework-CoreText = [{ version="^12.0", platform="darwin" }]
pyobjc-framework-ScreenCaptureKit = [{ version="^12.0", platform="darwin" }]
click = "^8.0.1"
psutil = "^5.8.0"
opencv-python-headless = "^4.5.3.56"

[tool.poetry.dev-dependencies]
black = "^24.0"
pyinstaller = [{ version="^6.0", platform="darwin" }]

[tool.poetry.scripts]
runekit = 'runekit.main:main'
